--- a/sesserh/index.html
+++ b/sesserh/index.html
@@ -18,24 +18,29 @@
             <header class="article-header">
                <h2>Module 1.1 Blog Post</h2>
             </header>
-            <h3>Health Cronut la Croix</h3>
-            <p>I'm baby photo booth fingerstache af enamel pin quinoa. Portland unicorn keytar paleo letterpress banjo kinfolk. Pitchfork four loko meditation, locavore marfa af listicle sriracha helvetica cred vexillologist PBR&B. Pop-up hexagon thundercats master cleanse before they sold out, fashion axe copper mug yes plz literally cred mukbang chia gluten-free. Bodega boys skateboard ugh green juice. Hella marxism succulents mumblecore forage kale chips bespoke fixie shoreditch chartreuse tofu before they sold out.</p>
-            <h3>Offal Tofu Cred Green Juice</h3>
-            <p>Microdosing portland banh mi bitters, pitchfork ethical selvage plaid keytar jianbing kickstarter cronut. Truffaut schlitz ennui, migas aesthetic letterpress la croix. Health goth 8-bit microdosing, cronut offal gluten-free tbh cornhole swag YOLO vape man bun godard. Pitchfork semiotics hella salvia kickstarter jean shorts. Air plant thundercats kombucha gentrify portland.</p>
-            <h3>Blue Roof Pour-Over Man Bun</h3>
-            <p>Yuccie mukbang pickled activated charcoal. PBR&B selfies DSA mustache authentic. Gochujang kombucha big mood retro, you probably haven't heard of them +1 lomo. Tbh pour-over yr viral gorpcore poutine four dollar toast. Bicycle rights man bun try-hard, mlkshk roof party occupy succulents taxidermy kogi enamel pin brunch paleo poutine yr. Blue bottle street art waistcoat typewriter yr hot chicken polaroid helvetica pitchfork.</p>
-            <ul>
-               <li>Neutra umami slow-carb vegan dreamcatcher.</li>
-               <li>Tacos cornhole humblebrag ethical.</li>
-               <li>DSA santo big mood organic charcoal bitters.</li>
-               <li>Hot chicken pitchfork poutine.</li>
-            </ul>
-            <h3>Mlkshk Stumptown Hot Chicken</h3>
-            <p>Next level gluten-free whatever, tacos activated charcoal bitters woke. Mlkshk photo booth bicycle rights paleo, butcher DIY ugh mukbang bespoke occupy affogato jawn adaptogen artisan tofu. Tbh gentrify you probably haven't heard of them neutra umami slow-carb vegan dreamcatcher waistcoat. Tacos cornhole humblebrag ethical austin neutra plaid. Sustainable gatekeep ugh locavore deep v, palo santo stumptown skateboard big mood organic lumbersexual mustache cornhole hot chicken. Gluten-free artisan cliche mumblecore af, edison bulb meditation messenger bag.</p>
+            <h3>Seeing the Bigger Picture: Systems Thinking and MBSE in Action</h3>
+            <p>Modern problems are rarely isolated. When designing software, managing infrastructure, or building global systems. We a are increasingly working in interconnected environments. We have begun exploring how systems thinking helps us better understand and manage complexity. This post reflects on that concept, its differences from traditional thinking, and how a model-based approach like MBSE (Model-Based Systems Engineering) helps us better navigate the digital world.</p>
+            <h3>What is Systems Thinking?</h3>
+            <p>Systems thinking is a way of understanding problems by looking at the whole system, not just a singular individual part. Rather than focusing only on the immediate issue, it encourages us to explore how different components interact and influence one another over time. According to Holt (2021), systems thinking requires shifting our perspective from “what is broken” to “how do the parts interact to create this result?” This change in mindset helps engineers and problem-solvers recognize hidden feedback loops, unintended consequences, and long-term patterns.</p>
+            <p>For example, imagine a university IT helpdesk struggling with slow ticket response times. A traditional fix might involve hiring more staff. Systems thinking, however might uncover a deeper issue that students are receiving inadequate technical training which in turn leads to more support requests. Or perhaps even outdated tools cause delays across multiple departments. Systems thinking looks at the entire network of causes and relationships instead of treating symptoms.</p>
+            <h3>Linear Thinking vs. Systems Thinking</h3>
+            <p>Traditional also known as linear thinking typically focuses on one-directional cause and effect scenarios such as “A causes B.” It works well for straightforward problems but falls short when complexity enters the equation. In contrast, systems thinking embraces circular cause-and-effect and recognizies that “A influences B, which may also influence A.” This feedback loop concept is critical in systems engineering.</p>
+            <p>Holt (2021) contrasts these two mindsets by showing that linear thinking leads to reactive decision-making, while systems thinking enables proactive design. For instance, in digital systems, a linear approach might optimize a single component like speed, which could unintentionally make other parts unstable. Systems thinking helps anticipate those ripple effects.</p>
+            <p>This shift from breaking problems into parts to viewing the entire system is what makes systems thinking so relevant in today’s interconnected environments. According to the International Council on Systems Engineering, systems engineering depends on understanding lifecycle impacts and how interconnected elements influence one another across complex architectures (INCOSE, 2015).</p>
+            <h4>Why Model-Based Systems Engineering (MBSE) Matters</h4> 
+            <p>As complexity grows, engineers need more than intuition to manage it they need a clear visual model of how everything fits together. That’s where MBSE comes in. MBSE replaces traditional document-based engineering with digital models that represent systems and their relationships. These models allow engineers to visualize how parts interact, simulate outcomes, and ensure that the design stays aligned with the system’s goals throughout the lifecycle.</p>
+            <p>For instance, when designing a smart home ecosystem, MBSE allows you to model devices, software, user interactions, and data flows. Instead of building the system first and fixing problems later, MBSE helps teams build a blueprint beforehand identifying potential bottlenecks and inefficiencies early.</p>
+            <h4>Personal Reflection</h4>
+            <p>Before IT 248, I often approached problems by jumping straight into solutions. But systems thinking has challenged me to take a step back and consider the broader environment. I’ve learned that sometimes, what looks like a technical failure is actually a process issue or even a cultural one. For example, in a past group project, our slow progress wasn’t because of a bad workflow, but because team roles were unclear. A systems mindset would have helped me identify that sooner.</p>
+            <p>What surprised me most is how useful systems thinking is outside of engineering. Whether managing a team, solving a customer service problem, or even planning personal goals, thinking in terms of relationships and patterns can lead to better decisions. Meadows (2008) notes that systems thinking gives us the ability to find leverage points — places in a system where a small shift can produce big change.</p>
+            <h4>Conclusion</h4>
+            <p>Systems thinking gives us the tools to tackle complexity by shifting our focus from isolated parts to interacting systems. It’s a mindset that helps uncover the root causes of problems and anticipate the consequences of decisions. When combined with Model-Based Systems Engineering, this approach becomes even more powerful — allowing engineers to create clear, adaptable models of the systems they’re building. As we’ve explored in IT 248, this integrated perspective isn’t just useful — it’s essential in the design and management of complex digital environments.</p>
             <footer class="article-footer">
                 <h3>Sources:</h3>
                 <ol>
-                    <li>Sherugar, S., & Budiu, R. (2016, August 21). <em>Direct manipulation: Definition</em>. Nielsen Norman Group. Retrieved March 19, 2025 from <a href="https://www.nngroup.com/articles/direct-manipulation/">https://www.nngroup.com/articles/direct-manipulation/</a></li>
+                    <li>Holt, J. (2021). <em>Systems engineering demystified: A practitioner’s handbook for developing complex systems using a model-based approach</em>. Packt Publishing.</li>
+                    <li>INCOSE. (2015). <em>INCOSE systems engineering handbook: A guide for system life cycle processes and activities</em> (4th ed.). Wiley.</li>
+                    <li>Meadows, D. H. (2008). <em>Thinking in systems: A primer</em>. Chelsea Green Publishing.</li>
                     </ol>
             </footer>
          </article>
