--- a/ahmedf/index.html
+++ b/ahmedf/index.html
@@ -8,38 +8,150 @@
    </head>
    <body>
 <!-- Page Header  -->
-      <header class="page-header">
-         <h1>Portfolio</h1>
-      </header>
+<header class="page-header">
+  <h1>Portfolio</h1>
+</header>
 <!-- Main Content Area  -->
-      <main>
-         <!-- Module 1.1 Blog Post Starts Here-->
-         <article>
-            <header class="article-header">
-               <h2>Module 1.1 Blog Post</h2>
-            </header>
-            <h3>Health Cronut la Croix</h3>
-            <p>I'm baby photo booth fingerstache af enamel pin quinoa. Portland unicorn keytar paleo letterpress banjo kinfolk. Pitchfork four loko meditation, locavore marfa af listicle sriracha helvetica cred vexillologist PBR&B. Pop-up hexagon thundercats master cleanse before they sold out, fashion axe copper mug yes plz literally cred mukbang chia gluten-free. Bodega boys skateboard ugh green juice. Hella marxism succulents mumblecore forage kale chips bespoke fixie shoreditch chartreuse tofu before they sold out.</p>
-            <h3>Offal Tofu Cred Green Juice</h3>
-            <p>Microdosing portland banh mi bitters, pitchfork ethical selvage plaid keytar jianbing kickstarter cronut. Truffaut schlitz ennui, migas aesthetic letterpress la croix. Health goth 8-bit microdosing, cronut offal gluten-free tbh cornhole swag YOLO vape man bun godard. Pitchfork semiotics hella salvia kickstarter jean shorts. Air plant thundercats kombucha gentrify portland.</p>
-            <h3>Blue Roof Pour-Over Man Bun</h3>
-            <p>Yuccie mukbang pickled activated charcoal. PBR&B selfies DSA mustache authentic. Gochujang kombucha big mood retro, you probably haven't heard of them +1 lomo. Tbh pour-over yr viral gorpcore poutine four dollar toast. Bicycle rights man bun try-hard, mlkshk roof party occupy succulents taxidermy kogi enamel pin brunch paleo poutine yr. Blue bottle street art waistcoat typewriter yr hot chicken polaroid helvetica pitchfork.</p>
-            <ul>
-               <li>Neutra umami slow-carb vegan dreamcatcher.</li>
-               <li>Tacos cornhole humblebrag ethical.</li>
-               <li>DSA santo big mood organic charcoal bitters.</li>
-               <li>Hot chicken pitchfork poutine.</li>
-            </ul>
-            <h3>Mlkshk Stumptown Hot Chicken</h3>
-            <p>Next level gluten-free whatever, tacos activated charcoal bitters woke. Mlkshk photo booth bicycle rights paleo, butcher DIY ugh mukbang bespoke occupy affogato jawn adaptogen artisan tofu. Tbh gentrify you probably haven't heard of them neutra umami slow-carb vegan dreamcatcher waistcoat. Tacos cornhole humblebrag ethical austin neutra plaid. Sustainable gatekeep ugh locavore deep v, palo santo stumptown skateboard big mood organic lumbersexual mustache cornhole hot chicken. Gluten-free artisan cliche mumblecore af, edison bulb meditation messenger bag.</p>
-            <footer class="article-footer">
-                <h3>Sources:</h3>
-                <ol>
-                    <li>Sherugar, S., & Budiu, R. (2016, August 21). <em>Direct manipulation: Definition</em>. Nielsen Norman Group. Retrieved March 19, 2025 from <a href="https://www.nngroup.com/articles/direct-manipulation/">https://www.nngroup.com/articles/direct-manipulation/</a></li>
-                    </ol>
-            </footer>
-         </article>
+<main>
+  <!-- Module 1.1 Blog Post Starts Here-->
+  <article>
+     <header class="article-header">
+        <h2>Understanding Systems Thinking in the Modern Digital World</h2>
+     </header>
+     <h3>Introduction</h3>
+     <p>In a progressively interconnecting digital world, linear thinking—the notion that A causes B, which then causes C—no longer properly addresses the complexity of real-world challenges. The digital age requires a broader perspective, one that accounts for interdependencies, feedback loops, and developing behaviors. This is where systems thinking becomes critical.</p>
+     <p>Systems thinking is not just a methodology but a mindset change—one that lets engineers, developers, and business leaders navigate complexity more efficiently. By understanding how components work together within a system, we can design stronger, scalable, and adaptive solutions. This blog post discusses the fundamentals of systems thinking, contrasts it with traditional linear methods, and explains why Model-Based Systems Engineering (MBSE) is a powerful tool for handling modern digital systems.</p>
+     <h3>What is Systems Thinking?</h3>
+  <p>Systems thinking is a holistic approach to problem-solving that highlights understanding the relationships and interactions among a systems components instead of just examining them in isolation. Instead of focusing only on individual elements, systems thinking encourages us to see how these elements impact and influence one another within the broader system.</p>
+     <p>As Weilkins (2022) notes, systems thinking changes the focus from parts to the dynamics of the entire system. Its a method of recognizing patterns, structures, and feedback loops instead of just reacting to isolated events.</p>
+     <h3>Key Principles of Systems Thinking</h3>
+        <ul>
+          <li><strong>Interconnectedness</strong> Every component in a system influences/affects others.</li>
+          <li><strong>Feedback Loops</strong> Systems usually self-regulate through reinforcing (positive) or balancing (negative) feedback.</li>
+          <li><strong>Emergence</strong> The whole is greater than the sum of its parts; new behaviors occur from interactions.</li>
+          <li><strong>Non-linearity</strong> Small changes can have huge, unpredictable impacts.</li>
+          <li><strong>Systems Boundaries</strong> Distinguishing what is inside and outside the system is critical for analysis.</li>
+     </ul>
+     <p>By implementing this perspective, we can better foresee unintended consequences, optimize system performance, and create more sustainable resolutions.</p>
 
+  <h2>Linear vs. Systems Thinking</h2>
+
+  <h3>Traditional (Linear) Thinking</h3>
+  <p>Linear thinking treats issues like isolated events with direct cause-and-effect relationships. For example:</p>
+  <p><strong>Problem:</strong> Sales drop.<br>
+  <strong>Linear Solution:</strong> Increase ads.</p>
+  <p>This approach supposes that systems are simple, stable, and predictable. While it works great for straightforward problems, it is unsuccessful in complex environments where multiple factors interact dynamically.</p>
+
+  <h3>Systems Thinking Approach</h3>
+  <p>A systems thinker would explore:</p>
+  <ul>
+    <li>Are customers dissatisfied because of the product quality?</li>
+    <li>Is employee turnover affecting the service?</li>
+    <li>Are supply chain delays the reason for stock shortages?</li>
+  </ul>
+
+  <p>Instead of a single fix, systems thinking assesses how these elements influence one another and how resolving one issue might affect another.</p>
+
+  <h3>Example: A Smart City Ecosystem</h3>
+  <p>In a smart city, traffic management, energy grids, and public services are interrelated. A linear approach may optimize traffic lights in isolation, but a systems approach would consider:</p>
+  <ul>
+    <li>How does traffic flow affect energy consumption?</li>
+    <li>How public transport schedules sway congestion?</li>
+    <li>What real-time data from IoT sensors can dynamically alter systems?</li>
+  </ul>
+
+  <p>This broader perspective leads to more effective, long-term solutions.</p>
+
+  <h2>Applying Systems Thinking to Digital Systems</h2>
+  <p>Digital environments are inherently complex adaptive systems. Think about:</p>
+  <ul>
+    <li>Cloud computing platforms with thousands of microservices cooperating in real time.</li>
+    <li>AI-driven applications where machine learning models develop based on user behavior.</li>
+    <li>Blockchain networks where decentralized nodes must achieve consensus.</li>
+  </ul>
+  <p>These systems are too big, fast-moving, and interdependent for traditional linear approaches. Instead, engineers use MBSE to handle complexity.</p>
+
+  <h2>What is Model-Based Systems Engineering (MBSE)?</h2>
+  <p>MBSE is a formal application of systems thinking in engineering. It substitutes for document-centric procedures with digital models that define, simulate, and validate system behavior.</p>
+
+  <p>According to Holt and Perry (2019), MBSE offers several advantages:</p>
+  <ul>
+    <li><strong>Improved Communication</strong> Stakeholders share a unified model instead of fragmented documents.</li>
+    <li><strong>Improved Traceability</strong> Modifications are tracked across the system lifecycle.</li>
+    <li><strong>Early Failure Detection</strong> Simulations find risks before implementation.</li>
+    <li><strong>Scalability</strong> Models alter as systems grow.</li>
+  </ul>
+
+  <h3>How MBSE Works</h3>
+  <ol>
+    <li><strong>System Modeling</strong> Engineers make digital representations (e.g., UML, SysML diagrams).</li>
+    <li><strong>Simulation & Analysis</strong> Models foresee system behavior under different conditions.</li>
+    <li><strong>Verification & Validation</strong> Guarantees the system meets requirements before deployment.</li>
+    <li><strong>Continuous Iteration</strong> Models evolve along with the system.</li>
+  </ol>
+
+  <p>By using MBSE, teams will be able to anticipate bottlenecks, optimize performance, and lower expensive redesigns.</p>
+
+  <h2>Why MBSE Matters in Digital Systems</h2>
+
+  <h3>1. Managing Complexity</h3>
+  <p>Traditional engineering depends on static documentation, which instantly becomes outdated. MBSE keeps a "single source of truth" through dynamic models.</p>
+  <p><strong>Example:</strong> A financial tech company creating a new payment platform must integrate:</p>
+  <ul>
+    <li>Fraud detection procedures</li>
+    <li>Compliance policies</li>
+    <li>User authentication procedures</li>
+  </ul>
+  <p>MBSE lets teams model interactions between these components, guaranteeing smooth integration.</p>
+
+  <h3>2. Improving Collaboration</h3>
+  <p>In large projects, miscommunication between teams (e.g., software vs. hardware engineers) causes errors. MBSE creates cross-disciplinary collaboration by offering a shared visual framework. MBSE guarantees all teams align with the same system model, lowering misalignment.</p>
+
+  <h3>3. Lowering Risk Through Simulation</h3>
+  <p>Digital systems must deal with unpredictable scenarios. MBSE allows:</p>
+  <ul>
+    <li>Stress testing (e.g., testing 1 million users on a server).</li>
+    <li>Failure mode analysis (e.g., how a network acts if a node fails).</li>
+  </ul>
+  <p><strong>Case Study:</strong> Boeing 787 Dreamliner Boeing used MBSE to model the aircrafts electrical systems, finding potential failures before physical testing (Weilkiens, 2022).</p>
+
+  <h2>Real-World Applications of Systems Thinking & MBSE</h2>
+  <ul>
+    <li><strong>NASAs Space Missions</strong> MBSE is used to design spacecraft systems, simulate missions, and ensure safety and efficiency.</li>
+    <li><strong>Healthcare Systems</strong> Systems thinking improves patient flow, supply chains, and health record management.</li>
+    <li><strong>Smart Cities</strong> MBSE is used to simulate traffic, manage power, and plan urban development in cities like Singapore.</li>
+  </ul>
+
+  <h2>Final Thoughts: The Importance of Systems Thinking and MBSE in the Digital Age</h2>
+  <p>As we explore an increasingly interconnected and complex digital landscape, the limits of traditional linear thinking become more obvious. The obstacles we face—either in software development, infrastructure management, or global supply chains—are no longer isolated problems with easy solutions. They are dynamic, progressing systems where changes in one component wave across the entire network, usually in unpredictable ways.</p>
+
+  <h3>Why Systems Thinking is Non-Negotiable in Modern Engineering</h3>
+  <p>The digital world works at a scale and speed that challenges traditional problem-solving approaches. Whether it's cloud outages, biased AI models, or supply chain hacks, systems thinking helps us recognize the underlying structure instead of just the surface symptoms.</p>
+
+  <h3>The Role of MBSE in Bridging Theory and Practice</h3>
+  <p>Systems thinking offers the framework, while MBSE turns it into practice. From simulation-driven design to multi-team collaboration, MBSE provides the tools for modern engineering excellence.</p>
+
+  <h3>The Future: Systems Thinking as a Core Competency</h3>
+  <p>As complexity increases, organizations must adopt systems thinking and MBSE or face stagnation and systemic risk.</p>
+
+  <h2>Conclusion: A Call to Action</h2>
+  <p>The shift from linear to systems thinking is not just optional—it is necessary. Whether you are a software engineer, product manager, or policymaker, the skill to see systems (not just parts) will classify your success.</p>
+
+  <h3>Three Steps to Start Today:</h3>
+  <ol>
+    <li>Map Your System Sketch: interactions between components (even on sticky notes on a whiteboard).</li>
+    <li>Ask What If Questions: Test scenarios before executing a solution.</li>
+    <li>Use MBSE Tools: Learn UML or simulation platforms like MATLAB/Simulink.</li>
+  </ol>
+  <h3>References</h3>
+  <ul>
+    <li>Johnson, J. (2020). <em>Designing with the Mind in Mind</em> (3rd ed.). Elsevier S & T. <a href="https://cwu.vitalsource.com/books/9780128182031" target="_blank">https://cwu.vitalsource.com/books/9780128182031</a></li>
+    <li>Holt, J., & Perry, S. (2019). <em>SysML for Systems Engineering: A Model-Based Approach</em>. IET.</li>
+    <li>Weilkiens, T. (2022). <em>Model-Based System Architecture</em>. Wiley.</li>
+  </ul>
+
+     </footer>
+  </article>
          <!-- Module 1.2 Blog Post Starts here -->
 
          <!-- Module 2.1 Blog Post Starts here -->
