Module 1.1 Blog Post Update
The blog post was implemented to include a new section focus on on system thinking and the model based approach.

--- a/garciaj/index.html
+++ b/garciaj/index.html
@@ -18,24 +18,21 @@
             <header class="article-header">
                <h2>Module 1.1 Blog Post</h2>
             </header>
-            <h3>Health Cronut la Croix</h3>
-            <p>I'm baby photo booth fingerstache af enamel pin quinoa. Portland unicorn keytar paleo letterpress banjo kinfolk. Pitchfork four loko meditation, locavore marfa af listicle sriracha helvetica cred vexillologist PBR&B. Pop-up hexagon thundercats master cleanse before they sold out, fashion axe copper mug yes plz literally cred mukbang chia gluten-free. Bodega boys skateboard ugh green juice. Hella marxism succulents mumblecore forage kale chips bespoke fixie shoreditch chartreuse tofu before they sold out.</p>
-            <h3>Offal Tofu Cred Green Juice</h3>
-            <p>Microdosing portland banh mi bitters, pitchfork ethical selvage plaid keytar jianbing kickstarter cronut. Truffaut schlitz ennui, migas aesthetic letterpress la croix. Health goth 8-bit microdosing, cronut offal gluten-free tbh cornhole swag YOLO vape man bun godard. Pitchfork semiotics hella salvia kickstarter jean shorts. Air plant thundercats kombucha gentrify portland.</p>
-            <h3>Blue Roof Pour-Over Man Bun</h3>
-            <p>Yuccie mukbang pickled activated charcoal. PBR&B selfies DSA mustache authentic. Gochujang kombucha big mood retro, you probably haven't heard of them +1 lomo. Tbh pour-over yr viral gorpcore poutine four dollar toast. Bicycle rights man bun try-hard, mlkshk roof party occupy succulents taxidermy kogi enamel pin brunch paleo poutine yr. Blue bottle street art waistcoat typewriter yr hot chicken polaroid helvetica pitchfork.</p>
-            <ul>
-               <li>Neutra umami slow-carb vegan dreamcatcher.</li>
-               <li>Tacos cornhole humblebrag ethical.</li>
-               <li>DSA santo big mood organic charcoal bitters.</li>
-               <li>Hot chicken pitchfork poutine.</li>
-            </ul>
-            <h3>Mlkshk Stumptown Hot Chicken</h3>
-            <p>Next level gluten-free whatever, tacos activated charcoal bitters woke. Mlkshk photo booth bicycle rights paleo, butcher DIY ugh mukbang bespoke occupy affogato jawn adaptogen artisan tofu. Tbh gentrify you probably haven't heard of them neutra umami slow-carb vegan dreamcatcher waistcoat. Tacos cornhole humblebrag ethical austin neutra plaid. Sustainable gatekeep ugh locavore deep v, palo santo stumptown skateboard big mood organic lumbersexual mustache cornhole hot chicken. Gluten-free artisan cliche mumblecore af, edison bulb meditation messenger bag.</p>
+            <h3>Model-Based Systems Thinking</h3>
+            <p>(Although systems could be defined and described differently, depending on the type and environment, their purpose is expressed by discovering the need. To put it in terms where it could be grasp, systems are like an orchestra; there’s a requirement for instruments to be in use, and everyone plays a particular part. The orchestra must play in sync and harmony which would result in a good performance. If one section or member is unsynchronized, it could ruin the entire tonality. Systems only function well when their needs are understood, ensuring the importance of how each component relates, responds, and adjusts to one another. System thinking involves recognizing that we are interrelated and understand that problems will come in different way but that we must triumph over these interventions.</p>
+            <h4>Traditional and Linear</h4>
+            <p>The system thinking perspective is described as complex, but the goal is to focus on building an interactive context rather than secluding parts to just resolve them separately. Traditional could be viewed as a structural engagement following a structural process. Linear thinking in this case is like a musician in an orchestra trying to fix a single note on his sheet, expecting that this will continue the flow of the music for everyone. What is not considered is how a note change can affect the harmony and timing of the entire orchestra. When encountering system engineering, this concept could possibly work within a specific type but not when there are many classifications, or taxonomies, of systems. Characteristics enable the development of systems (Holt, J. 2019).</p>
+            <h5>Model-Based Approach</h5>
+            <p> Model-based approach is best to handle such challenges as systems have become more intricate, which is why it’s essential in systems engineering. It is said that a model-based approach will include efficient tools and skills that could open a successful system while managing difficult connections within a space, allowing communication alerts to be shared with key players regarding system concerns (Holt, J. 2019).   Think of it like an orchestra rehearsal room; this is a space where you’re able to repair, visualize, design, and simulate. Tuning all the instruments will allow the sounds to sync in preparation for the final performance. In this perspective, it’s important to know the lack of communication or understanding and the inability to resolve a complex matter are imminent to system failure if system engineering is not properly established. 
+               In the design of complex digital systems, in the order of things, communication brings together people and systems. There must be common languages in place: spoken and domain-specific Language which are both used to provide a basic mechanism of communication and the concepts for a given application or domain (Holt, J. 2019). To manage complexity, it must first be found and identified within a system. Interested parties must consider different points of views and focus less on assumptions to allow understanding. This is where it begins, when investigating an issue, involve everyone for a productive discussion as result will create action that will contribute to the success to developing a successful system.</p>
+            <h6>Conclusion</h6>
+            <p>We ought to never forget the objective of system engineering. Successful management and development of complicated digital systems in a technology context depends on system thinking and model-based approach hand in hand. System thinking allows us to work beyond difficult problems. The model approach provides the ammunition to assist the systems need to be a success.</p>
             <footer class="article-footer">
-                <h3>Sources:</h3>
+                <h7>Sources:</h7>
                 <ol>
-                    <li>Sherugar, S., & Budiu, R. (2016, August 21). <em>Direct manipulation: Definition</em>. Nielsen Norman Group. Retrieved March 19, 2025 from <a href="https://www.nngroup.com/articles/direct-manipulation/">https://www.nngroup.com/articles/direct-manipulation/</a></li>
+                    <li>Holt, J. (2019) <em>Systems engineering demystified: Apply modern, model-based systems engineering techniques to build complex systems</em> (2nd ed.). Packt Publishing Ltd.</li>
+                    <li>Goodman, M. (2016, August 16). <em>Systems thinking: What, why, when, where, and how?</em> The Systems Thinker <a href=https://thesystemsthinker.com/systems-thinking-what-why-when-where-and-how/</a></li>
+                    <li>Lutkevich, B. (2023, March 31). <em>systems thinking. Search CIO.</em> <a href=https://www.techtarget.com/searchcio/definition/systems-thinking</a></li> 
                     </ol>
             </footer>
          </article>
