added missing student link to portfolios

--- a/portfolios/index.html
+++ b/portfolios/index.html
@@ -262,6 +262,18 @@
                         </a>
                     </li>
                     <li>
+                        <a href="../odumt">
+                            <div class="card">
+                                <div class="card-front">
+                                    <p>odumt</p>
+                                </div>
+                                <div class="card-back">
+                                    <p>odumt</p>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
                         <a href="../pedersene">
                             <div class="card">
                                 <div class="card-front">
