Added email address in footer to main index file.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           </section>
         </main>
         <footer>
-          <p><span>Questions? Contact: </span><a href="mailto:admin@fval.org">admin@fval.org</a></p>
+          <p><span>Questions? Contact: </span><a href="mailto:john.durham@cwu.edu">john.durham@cwu.edu</a></p>
         </footer>
         <!-- JavaScript Links -->
         <script src="script.js"></script>
