--- a/lokokam/index.html
+++ b/lokokam/index.html
@@ -40,7 +40,125 @@
             </footer>
          </article>
 
-         <!-- Module 1.2 Blog Post Starts here -->
+         <!-- Module 1.2 Blog Post Starts here --> <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>How Systems Grow: Understanding the Life Cycle of a System</title>
+</head>
+<body>
+    <h1>How Systems Grow: Understanding the Life Cycle of a System</h1>
+
+    <h2>Introduction</h2>
+    <p>
+        Everything we use today—phones, websites, cars, even smart homes—are systems. 
+        But these systems don’t just appear. They are <strong>designed, built, used, fixed, and one day, replaced</strong>. 
+        This process is called the <strong>systems development life cycle</strong>, or SDLC.
+    </p>
+    <p>
+        In this post, we’ll explain what that life cycle means, the different ways to manage it 
+        (called <strong>life cycle models</strong>), and why it’s important to think about a system’s life from beginning to end.
+    </p>
+
+    <hr>
+
+    <h2>What Is the Systems Development Life Cycle?</h2>
+    <p>
+        The <strong>systems development life cycle (SDLC)</strong> is a step-by-step way of creating and managing systems. 
+        It helps engineers and teams stay organized and make sure the system works properly.
+    </p>
+    <p>
+        According to <em>Systems Engineering Demystified</em>, a system usually goes through these <strong>six steps</strong>:
+    </p>
+    <ol>
+        <li><strong>Conception</strong> – Think about the system's goal and why it is needed.</li>
+        <li><strong>Development</strong> – Create ideas, test options, and choose the best design.</li>
+        <li><strong>Production</strong> – Build the system and test it to make sure it works.</li>
+        <li><strong>Utilization</strong> – The system is used by people or organizations.</li>
+        <li><strong>Support</strong> – Fix problems, make updates, and help users.</li>
+        <li><strong>Retirement</strong> – Stop using the system and remove it safely.</li>
+    </ol>
+
+    <hr>
+
+    <h2>Life Cycle Models: Three Ways to Build a System</h2>
+    <p>There are different ways to follow the life cycle. These are called <strong>Life Cycle Models</strong>. The three most common are:</p>
+
+    <h3>1. Linear Model (Waterfall)</h3>
+    <ul>
+        <li>You <strong>finish one step</strong> before going to the next.</li>
+        <li>It’s simple and easy to understand.</li>
+        <li>But if you make a mistake early, it's hard to fix later.</li>
+    </ul>
+    <p><strong>Good for:</strong> Small projects with clear goals.<br>
+    <strong>Not good for:</strong> Projects where changes happen often.</p>
+
+    <h3>2. Iterative Model</h3>
+    <ul>
+        <li>This model <strong>repeats the steps</strong> many times.</li>
+        <li>Each time, the system gets better.</li>
+        <li>You can test and improve as you go.</li>
+        <li>But if you're not careful, it can go on too long.</li>
+    </ul>
+    <p><strong>Good for:</strong> Complex projects with changing ideas.<br>
+    <strong>Not good for:</strong> Projects with a short deadline or fixed budget.</p>
+
+    <h3>3. Incremental Model</h3>
+    <ul>
+        <li>This model <strong>adds features one at a time</strong>.</li>
+        <li>You deliver small working parts early.</li>
+        <li>Users can try the system as it grows.</li>
+        <li>But putting all the parts together can be tricky.</li>
+    </ul>
+    <p><strong>Good for:</strong> Big projects that need fast results.<br>
+    <strong>Not good for:</strong> Projects that must be done all at once.</p>
+
+    <hr>
+
+    <h2>Why Does the Life Cycle Matter?</h2>
+    <p>
+        Thinking about the life cycle helps us:
+    </p>
+    <ul>
+        <li><strong>Plan better</strong> – We know what to do at each step.</li>
+        <li><strong>Build smarter</strong> – We focus only on what the system really needs.</li>
+        <li><strong>Fix faster</strong> – It’s easier to update or repair the system.</li>
+        <li><strong>Save money</strong> – We avoid big mistakes later.</li>
+    </ul>
+    <p>
+        As the book says, it’s not just about building the system—it’s about 
+        <strong>managing how the system changes over time</strong>.
+    </p>
+    <p>
+        Also, when systems are built with <strong>sustainability</strong> in mind, 
+        we reduce waste and help the planet (Jovanovic et al., 2022).
+    </p>
+
+    <hr>
+
+    <h2>Final Thoughts</h2>
+    <p>
+        No system lasts forever. It will change, grow, and one day stop working. 
+        That’s why understanding the life cycle is so important. And by choosing the 
+        <strong>right model</strong> (linear, iterative, or incremental), we can make sure 
+        we design systems that <strong>last longer, work better, and meet real needs</strong>.
+    </p>
+    <p>
+        If you work in tech, design, or management, learning about the systems life cycle 
+        will help you make smarter choices—and better systems.
+    </p>
+
+    <hr>
+
+    <h2>References (APA)</h2>
+    <ul>
+        <li>Holt, J. D., & Perry, S. A. (2021). <em>Systems Engineering Demystified</em> (2nd ed.). Packt Publishing.</li>
+        <li>Royce, W. W. (1970). Managing the development of large software systems. <em>Proceedings of IEEE WESCON</em>, 26, 1–9.</li>
+        <li>Jovanovic, M., Milinkovic, D., & Djukic, M. (2022). Life Cycle Thinking in Sustainable Systems Engineering. <em>Journal of Cleaner Production</em>, 331, 129927. <a href="https://doi.org/10.1016/j.jclepro.2021.129927" target="_blank">https://doi.org/10.1016/j.jclepro.2021.129927</a></li>
+    </ul>
+</body>
+</html>
+
 
          <!-- Module 2.1 Blog Post Starts here -->
 
